several changes to how templates are built

--- a/dsapps/base.scss
+++ b/dsapps/base.scss
@@ -1,4 +1,4 @@
-@import "~bootstrap/scss/bootstrap";
+@import "node_modules/bootstrap/scss/bootstrap";
 
 // @import '~bootstrap-vue/src/index';
 // @import "~bootstrap-icons/font/bootstrap-icons";
