improvement to dsapps layout

--- a/dsapps/datacrawler/index.pug
+++ b/dsapps/datacrawler/index.pug
@@ -1,10 +1,7 @@
 extends ../index.pug
 
-block css 
-    link(rel="stylesheet" href="../_base/base.scss")
-
 block body
-    a(href="./data/raids") Home
+    //- a(href="./data/raids") Home
     #vue
 
 block script
