minor adjustments to layout

--- a/dsapps/wordcloud/index.pug
+++ b/dsapps/wordcloud/index.pug
@@ -4,8 +4,9 @@ block body
     form#wordcloud.d-flex.row.px-3.mt-2(action="/wordcloud" method="post" target="_top")
         fieldset.justfy-center
             textarea#exampleFormControlTextarea1.form-control(
-                name="text" 
-                rows="3"
+                name="text"
+                rows="10"
+                placeholder="Type your text here."
             )/
 
             //- input.form-control.me-2(
