--- a/dsapps/datacrawler/index.pug
+++ b/dsapps/datacrawler/index.pug
@@ -2,6 +2,8 @@ extends ../index.pug
 
 block body
     #vue
+        //- router-link(to="/about") About
+        router-view
 
 block script
     script(type="module" src="ui/vue.js")
